name:               metar
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
copyright:          Copyright (c) 2018, Tony Morris
synopsis:           Australian METAR
category:           Data, Aviation
description:       
  Get Australian METAR
homepage:           https://github.com/tonymorris/metar
bug-reports:        https://github.com/tonymorris/metar/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/metar.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , aeson >= 1.4.0.0 && < 1.5
                    , aeson-pretty >= 0.8 && < 0.9
                    , bytestring >= 0.10 && < 0.11
                    , Crypto >= 4.2.5.1 && < 4.3
                    , directory >= 1.3.1 && < 1.4
                    , exceptions >= 0.10.0 && < 1
                    , filepath >= 1.4 && < 1.5
                    , HTTP >= 4000 && < 5000
                    , lens >= 4 && < 5
                    , optparse-applicative >= 0.13.2  && < 0.15
                    , parsec >= 3.1 && < 3.2
                    , parsers >= 0.12 && < 0.13
                    , network-uri >= 2.6 && < 3
                    , process >= 1.6 && < 1.7
                    , semigroups >= 0.9 && < 0.19
                    , semigroupoids >= 5.2 && < 6
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , time >= 1.6 && < 1.10
                    , utf8-string >= 1.0.1.1 && < 1.1
                    , unordered-containers >= 0.2.9.0 && < 0.3
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Metar

executable          metar
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , metar

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src-exe

test-suite          tests

  build-depends:      QuickCheck >=2.9.2 && <2.13
                    , base >=4.8 && < 5
                    , checkers >=0.4.6 && <0.5
                    , metar
                    , lens >=4 && <4.18
                    , tasty >=0.11 && <1.2
                    , tasty-hunit >=0.9 && <0.11
                    , tasty-quickcheck >=0.8.4 && <0.11

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
