name:               metar
version:            0.0.4
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@sıɹɹoɯʇ>
copyright:          Copyright (c) 2018-2026, Tony Morris
synopsis:           METAR from NOAA
category:           Data, Aviation
description:
  Obtain METAR observations from NOAA.
  .
  Supports ICAO airport codes available in the NOAA database.
  .
  <<https://i.imgur.com/VGTogB8.gif>>
homepage:           https://github.com/tonymorris/metar
bug-reports:        https://github.com/tonymorris/metar/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog.md

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/metar.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , bytestring >= 0.10 && < 0.13
                    , http-client >= 0.5 && < 0.8
                    , HTTP >= 4000 && < 5000
                    , lens >= 4 && < 6
                    , semigroups >= 0.9 && < 0.21
                    , semigroupoids >= 5.2 && < 7
                    , transformers >= 0.5 && < 0.7
                    , deriving-compat >= 0.5 && < 0.7
                    , wreq >= 0.5 && < 0.6

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Metar
                    , Data.Aviation.Metar.METARResult
                    , Data.Aviation.Metar.METARResultT

executable          metar
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , metar

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src-exe

test-suite          tests

  build-depends:      QuickCheck >=2.9.2
                    , base >=4.8 && < 5
                    , checkers >=0.4.6
                    , metar
                    , lens >=4
                    , tasty >=0.11
                    , tasty-hunit >=0.9
                    , tasty-quickcheck >=0.8.4

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
